--- a/oldalak.css
+++ b/oldalak.css
@@ -14,7 +14,7 @@ body{
 
 header{
 	background-image: url("hatter1.jpg");
-	color: red;
+	color: black;
 	padding: 10px 15px;
 	font-size: 30px;
 	font-weight: bold;
