--- a/oldalak.css
+++ b/oldalak.css
@@ -106,3 +106,13 @@ table,td{
 }
 
 tr:hover {background-color: rgba(0,0,0,0.5);}
+
+h1.lathato{
+	background-color:rgba(0,0,0,0.7);
+	padding: 10px 15px;
+	margin: auto 650px;
+	border-top-right-radius:20px;
+	border-top-left-radius:20px;
+	border-bottom-right-radius:20px;
+	border-bottom-left-radius:20px;
+}
